syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.hacom.grpc";
option java_outer_classname = "OrderServiceProto";

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string order_id = 1;
  string customer_id = 2;
  string phone = 3;
  repeated OrderItem items = 4;
}

message OrderItem {
  string name = 1;
  int32 quantity = 2;
}

message OrderResponse {
  string order_id = 1;
  string status = 2;
  google.protobuf.Timestamp timestamp = 3;
}
